# whisper-omega-beta

./: .gitignore  DECISIONS.md  Dockerfile  IMPLEMENTATION_TASKS.md  README.md  pyproject.toml  validation-report.json
docs/: BENCHMARK_TEMPLATE.md  DATASET_MANIFEST_TEMPLATE.md  PYANNOTE_SETUP.md  VALIDATION_CHECKLIST.md  VALIDATION_DATASET_CANDIDATES.md  VALIDATION_DATASET_MANIFEST.md
fixtures/d1_short_ja/: manifest.json
fixtures/d2_short_en/: manifest.json
fixtures/d3_long_mixed/: d3_concat_01.recipe.json  d3_concat_02.recipe.json
fixtures/d4_diarization/: d4_mix_01.recipe.json  (+2 more)
scripts/: __init__.py  benchmark_smoke.py  build_alignment_text_map.py  build_dataset_manifest.py  build_diarization_fixture.py  build_failure_fixtures.py  build_ja_reading_map.py  build_long_fixture.py  create_smoke_wav.py  export_google_fleurs_fixtures.py  generate_validation_report.py  run_acceptance.py  run_alignment_smoke.py  run_diarization_smoke.py  run_gpu_acceptance.py  run_nemo_acceptance.py  run_pyannote_acceptance.py  run_smoke.sh
tests/: test_acceptance.py  test_align.py  test_alignment_smoke.py  test_alignment_text_map.py  test_api.py  test_benchmark_smoke.py  test_cli.py  test_compatibility_matrix.py  test_contracts.py  test_diarization_smoke.py  test_diarize.py  test_diarize_contracts.py  test_fixture_builders.py  test_google_fleurs_export.py  test_gpu_acceptance.py  test_ja_reading_map.py  test_models.py  test_nemo_acceptance.py  test_pyannote_acceptance.py  test_service.py  test_validation_report.py  test_validation_tools.py
whisper-omega-plan/: 評価_202603211500.md
(+42 files in other folders)
